--- a/content/post/2020-09-11-compromise-between-the-electoral-college-and-a-national-popular-vote.Rmd
+++ b/content/post/2020-09-11-compromise-between-the-electoral-college-and-a-national-popular-vote.Rmd
@@ -1,28 +1,27 @@
 ---
-title: Compromise Between the Electoral College and a National Popular Vote
+title: A National Popular Vote Weighted by the Electoral College
 author: Bryan Shalloway
 date: '2020-09-11'
-slug: compromise-between-the-electoral-college-and-a-national-popular-vote
 categories:
   - politics
 tags:
-  - rstats
   - data journalism
   - electoral college
   - popular vote
+slug: compromise-between-the-electoral-college-and-a-national-popular-vote
 output:
   blogdown::html_page:
     toc: no
 ---
 
-*In this post I discuss using a national popular vote weighted by the electoral college presidential elections. This approach would empower voters by expanding political influence outside of ‘battleground states.’ It would also preserve the existing biases inherent in the American electoral college (thereby making such a system legislatively palatable across party affiliations). This post presents a discussion of potential merits of a weighted national popular vote -- it does not represent an endorsement.*
+*In this post I discuss using a national popular vote weighted by the electoral college for presidential elections. This approach would empower voters by expanding political influence outside of ‘battleground states.’ It would also preserve the existing biases built into the American electoral college (thereby making such a system legislatively palatable across party affiliations). This post presents some potential merits of a weighted national popular vote -- it does not represent an endorsement.*
 
 Irrespective of political party or disposition towards direct democracy, the winner-take-all approach (currently applied by most US states to allocate their electoral votes for the president) has clear drawbacks. These include:
 
-* incentivizes only campaigning in battleground states
+* incentivizes presidential candidates only campaigning in battleground states
 * greater variability in outcomes compared to alternatives^[A few thousand votes in a few places have a greater chance of swaying entire elections in our current system compared to alternatives.]
 * incentivizes promoting policies that benefit battleground states over the interests of ‘all Americans’
-* promotes a feeling among the electorate that their vote is unlikely to influence the election
+* promotes a feeling among much of the electorate that their vote is unlikely to influence the election
 
 In the last four years, the movement to change the election of the president to a national popular vote has gained traction. A compact between states to vote for the national popular vote winner has been passed in states representing 196 of the 270 electoral votes required for the agreement to have legal force. The website promoting the [National Popular Vote](https://www.nationalpopularvote.com/) initiative outlines the disadvantages of the winner-take-all approach used by most states and provides arguments for employing a national popular vote. The site also provides evidence for the constitutionality of a national popular vote (debunking straw-man arguments against it) and counters ‘myths’^[‘myths,’ is the terminology used on their website] that a popular vote would overly advantage or disadvantage certain states.
 
