edit election post

--- a/content/post/2020-09-11-compromise-between-the-electoral-college-and-a-national-popular-vote.Rmd
+++ b/content/post/2020-09-11-compromise-between-the-electoral-college-and-a-national-popular-vote.Rmd
@@ -27,13 +27,13 @@ In the last several years^[particularly since the 2016 election], the movement f
 
 However partisanship makes transitioning to a national popular vote difficult. For any given presidential election cycle, the electoral college may favor a particular political party^[However the political party the electoral college advantages frequently changes between election cycles ([Silver, 2016](https://fivethirtyeight.com/features/will-the-electoral-college-doom-the-democrats-again/)).]. Hence it may be against the advantaged party’s interests to support a change to the election process (likewise, the disadvantaged party has an incentive to *support* a change in the election process^[It’s not a coincidence that the popular vote initiative is gained substantial support from many Democrats following the 2016 election.]). Therefore a cynic could argue that getting the requisite number of states to legislate support for the national popular vote compact is almost synonymous with winning the election. Even a national popular vote that *was* passed into law may be politically fragile, and at risk of frequent challenges depending on the state-level political party in power.
 
-The goal of the National Popular Vote initiative is to *make every vote matter equally*. However if we weaken this goal to be: *make the importance of votes more equal than they currently are,* ^[by spreading political influence away from the dozen or so battleground states] it may be easier to change the electoral system in a way that is less likely to agitate partisans or those attached to the influences inherent in the electoral college.
+The goal of the National Popular Vote initiative is to *make every vote matter equally*. However if we weaken this goal to be: *make the importance of votes more equal than they currently are,* ^[by spreading political influence away from the dozen or so battleground states] it may be easier to change the electoral system in a way that is less likely to agitate partisans or traditionalists attached to the influences inherent in the electoral college.
 
 I propose that a popular vote *weighted by the electoral college* deserves consideration. Such an approach is equivalent to having the allocation of electoral votes in each state be based on the popular vote within that state. For example, if a state has 30 electoral votes, and 55% of those go to the Republican and 45% to the Democrat, the Republican would receive 16.5 votes and the Democrat 13.5. Let's apply this across states for the 2012 election.
 
 ![[brshallo/weighted-national-popular-vote](https://github.com/brshallo/weighted-national-popular-vote)](https://github.com/brshallo/weighted-national-popular-vote/blob/master/state-electoral-votes-split.png?raw=true)
 
-Aggregating these for the 2012 election, the Democrat (Obama) would have received 271.4 electoral votes, the Republican (Romney) 255 electoral votes, and other candidates 11.6 electoral votes. This represents 50.4%, 47.4%, and 2.2% respectively. Describing outcomes in terms of 'proportional allocation of electoral votes' or as a 'weighted percentage of the popular vote' are interchangeable^[As long as you allow for fractional electoral votes.]. However percentages are easier to articulate, hence that is the terminology I use for the remainder of the post.
+Aggregating these for the 2012 election, the Democrat (Obama) would have received 271.4 electoral votes, the Republican (Romney) 255 electoral votes, and other candidates 11.6 electoral votes. This represents 50.4%, 47.4%, and 2.2% respectively. Describing outcomes in terms of 'proportional allocation of electoral votes by state' or as a 'electoral college weighted percentage of the popular vote' are interchangeable^[As long as you allow for fractional electoral votes.]. However percentages are easier to articulate, hence this is the terminology I use for the remainder of the post.
 
 A national popular vote weighted by the electoral college would truly empower small states^[The electoral college is designed to empower small states, though in practice it only empowers battleground states (at least for presidential elections).] whose voters' ballots could be worth as much as three times those of larger states[^1]. 
 
@@ -45,13 +45,13 @@ A national popular vote weighted by the electoral college would truly empower sm
 
 ![State Population per electoral vote from the 2010 census, [Wikipedia, National Popular Vote Interstate Compact](https://en.wikipedia.org/wiki/National_Popular_Vote_Interstate_Compact)](https://upload.wikimedia.org/wikipedia/commons/thumb/c/c9/US_2010_Census_State_Population_Per_Electoral_Vote.png/660px-US_2010_Census_State_Population_Per_Electoral_Vote.png)
 
-While this may seem horribly unfair, it only makes the existing biases built into the electoral college more noticeable. Also^[regardless of your opinion on the electoral college and whether voters in small states *should* be afforded outsized representation compared to their population], it still represents a major improvement in representativeness over the existing system -- where only a ~quarter of the population’s votes make any substantitive difference in the outcome of the election (specifically those votes in battleground states^[“Influence" here is evidenced by campaign events and ad spending among candidates as described [here](https://www.nationalpopularvote.com/written-explanation).]). 
+While this may seem horribly unfair, it only makes the existing biases built into the electoral college more transparent. Also^[regardless of your opinion on the electoral college and whether voters in small states *should* be afforded outsized representation compared to their population], it still represents a major improvement in representativeness over the existing system -- where only a ~quarter of the population’s votes make any substantitive difference in the outcome of the election (those votes in battleground states^[“Influence" here is evidenced by campaign events and ad spending among candidates as described [here](https://www.nationalpopularvote.com/written-explanation).]). 
 
-A weighted national popular vote would likely preserve (at least in part) any advantage a party has in the electoral college (for a given election cycle). This would make associated legislation potentially more palatable and enduring across changes in state party leadership (compared to legislation for a raw popular vote). The weighted popular vote also maintains the essence of the existing electoral college^[I.e. it still spreads out votes by states and not just across the population] -- it just replaces 'winner-take-all' with 'proportional' allocation of a state's electoral votes (perhaps a less glaring difference compared to adopting a raw national popular vote).
+A weighted national popular vote would likely preserve (at least in part) any advantage a party has in the electoral college (for a given election cycle). This would make associated legislation potentially easier to pass and more enduring across changes in state party leadership (compared to legislation for a raw popular vote). The weighted popular vote also maintains the essence of the existing electoral college^[I.e. it still spreads out votes by states and not just across the population] -- it just replaces 'winner-take-all' with 'proportional' allocation of a state's electoral votes (perhaps a less glaring difference compared to adopting a raw national popular vote).
 
-Let's review what outcomes would have been in recent elections if using a national popular vote weighted by the electoral college.
+Let's review what the results would have been in recent elections if applying a national popular vote weighted by the electoral college.
 
-*Proportion of electoral college weighted national popular vote since 1976:*
+*Proportion of electoral college weighted national popular vote won on elections from 1976 to 2016:*
 
 
 | year|   dem|   rep| other|
@@ -70,7 +70,7 @@ Let's review what outcomes would have been in recent elections if using a nation
 
 Since 1976 there have been two elections where the popular vote and the electoral college did not agree (2000 and 2016). The weighted national popular vote would have disagreed with the raw national popular vote once (in the 2000 election) and with the winner-take-all based electoral college once (in 2016)^[In 2016 Clinton would have had a ~1 percentage point advantage over Trump in the weighted popular vote (compared to the ~2 percentage point advantage she had in the raw popular vote). Under the weighted popular vote George W. Bush would still have still won the election in 2000, despite losing the raw popular vote.]. 
 
-See github repo [brshallo/weighted-national-popular-vote](https://github.com/brshallo/weighted-national-popular-vote) for details on data sources and scripts used to produce figures.
+See github repo [brshallo/weighted-national-popular-vote](https://github.com/brshallo/weighted-national-popular-vote) for details on data sources and scripts used to produce the above figures and calculations.
 
 # How to get it passed?
 
@@ -83,19 +83,20 @@ Essentially it was a [collective action problem](https://en.wikipedia.org/wiki/C
 *Ways of getting around this collective action problem:*
 
 *	The approach the National Popular Vote initiative has used is to have individual states pass laws that only go into effect once the requisite threshold of electoral votes is reached – thereby not forcing any individual state to ‘give-up’ some of their influence prematurely. The same approach could be taken to push adoption of a weighted national popular vote^[I.e. the law would only go into effect when states representing 270 electoral votes passed legislation.].
-*	Other approaches may be more piecemeal. For example states of similar size and counterbalanced political leanings could agree to pass proportional voting laws simultaneously – thereby not damaging the interests of their preferred presidential candidate (but still empowering the voters within their state)^[E.g. say a ten vote state that tends to go 60% democratic teams up with another ten vote state that tends to go 60% republican and each pass a proportional voting system simultaneously.]. Such an approach would be more effective if fractional votes among electors are allowed^[Interesting article on fractional representatives: http://www.hnn.us/articles/129114.html .] ^[If such an approach were adopted by all states, it would create the problem of it being more likely that an individual state does not receive the requisite 270 electoral votes... which would need to be addressed.].
-*	A third approach would be an amendment to the US constitution.
+*	Other approaches may be more piecemeal. For example states of similar size and counterbalanced political leanings could agree to pass proportional voting laws simultaneously – thereby not reducing the support to their preferred presidential candidate (but still empowering the voters within their state)^[E.g. say a ten vote state that tends to go 60% democratic teams up with another ten vote state that tends to go 60% republican and each pass a proportional voting system simultaneously.]. Such an approach would be more effective if fractional votes among electors are allowed^[Interesting article on fractional representatives: http://www.hnn.us/articles/129114.html .] ^[If such an approach were adopted by all states, it would create the problem of it being more likely that an individual state does not receive the requisite 270 electoral votes... which would need to be addressed.].
+*	Of course there's a constitutional amendment...
 
 # Closing note
 
-The chief advantage of a national popular vote for presidential elections is not that it achieves *perfect* representation but that it provides *improved incentives* for presidential candidates. For example it would promote campaigns and policy proposals that gave attention to a broader subset of the American public^[As described [here]( https://www.nationalpopularvote.com/written-explanation).] and reduce the variability in election results. However a national popular vote inevitably faces partisan challenges and may give-off the appearance of being too momentous a departure from the norms of the existing electoral college. As a compromise between these systems, a national popular vote, that is weighted by the electoral college, avoids many of the challenges to legislating a pure national popular vote while still achieving its most important objectives.
+The chief advantage of a national popular vote for presidential elections is not that it achieves *perfect* representation but that it provides *improved incentives* for presidential candidates. For example it would promote campaigns and policy proposals that gave attention to a broader subset of the American public^[As described [here]( https://www.nationalpopularvote.com/written-explanation).] and reduce the variability in election results. However a national popular vote inevitably faces partisan challenges and may give-off the appearance of being too momentous a departure from the norms of the existing electoral college. As a compromise between these systems a national popular vote, that is weighted by the electoral college, avoids many of the challenges to legislating a pure national popular vote while still achieving its most important objectives.
 
 # Appendix
 
 ## What about Nebraska and Maine?
 
 > In all but two states, electoral votes are 'winner-take-all'. The candidate winning the popular vote normally receives all of that state's votes. Maine and Nebraska have taken a different approach. Using the 'congressional district method', these states allocate two electoral votes to the state popular vote winner, and then one electoral vote to the popular vote winner in each Congressional district (2 in Maine, 3 in Nebraska). This creates multiple popular vote contests in these states, which could lead to a split electoral vote.
-> - https://www.270towin.com/content/split-electoral-votes-maine-and-nebraska/
+>
+> -[270towin.com](https://www.270towin.com/content/split-electoral-votes-maine-and-nebraska/)
 
 There may be some philosophical appeal to this method for allocating votes however there are still relatively similar problems with it to the ‘winner-take-all’ method when applied to the state. For example, 
 
