update about page

--- a/content/post/2020-09-11-compromise-between-the-electoral-college-and-a-national-popular-vote.Rmd
+++ b/content/post/2020-09-11-compromise-between-the-electoral-college-and-a-national-popular-vote.Rmd
@@ -45,7 +45,7 @@ A national popular vote weighted by the electoral college would truly empower sm
 
 ![State Population per electoral vote from the 2010 census, [Wikipedia, National Popular Vote Interstate Compact](https://en.wikipedia.org/wiki/National_Popular_Vote_Interstate_Compact)](https://upload.wikimedia.org/wikipedia/commons/thumb/c/c9/US_2010_Census_State_Population_Per_Electoral_Vote.png/660px-US_2010_Census_State_Population_Per_Electoral_Vote.png)
 
-While this may seem horribly unfair, it only makes the existing biases built into the electoral college more transparent. Also^[regardless of your opinion on the electoral college and whether voters in small states *should* be afforded outsized representation compared to their population], it still represents a major improvement in representativeness over the existing system -- where only a ~quarter of the population’s votes make any substantitive difference in the outcome of the election (those votes in battleground states^[“Influence" here is evidenced by campaign events and ad spending among candidates as described [here](https://www.nationalpopularvote.com/written-explanation).]). 
+While this may seem horribly unfair, it only makes the existing biases built into the electoral college more transparent. Also^[regardless of your opinion on the electoral college and whether voters in small states *should* be afforded outsized representation compared to their population], it still represents a major improvement in representativeness over the existing system -- where only a ~quarter of the population’s votes make any substantitive difference in the outcome of the election (those votes in battleground states^[“Influence" here is evidenced by campaign events and ad spending among candidates as described at [this page](https://www.nationalpopularvote.com/written-explanation).]). 
 
 A weighted national popular vote would likely preserve (at least in part) any advantage a party has in the electoral college (for a given election cycle). This would make associated legislation potentially easier to pass and more enduring across changes in state party leadership (compared to legislation for a raw popular vote). The weighted popular vote also maintains the essence of the existing electoral college^[I.e. it still spreads out votes by states and not just across the population] -- it just replaces 'winner-take-all' with 'proportional' allocation of a state's electoral votes (perhaps a less glaring difference compared to adopting a raw national popular vote).
 
