--- a/content/post/2020-05-31-tidy-2-way-column-combinations.Rmd
+++ b/content/post/2020-05-31-tidy-2-way-column-combinations.Rmd
@@ -2,17 +2,16 @@
 title: Tidy Pairwise Operations
 author: Bryan Shalloway
 date: '2020-06-03'
-slug: tidy-2-way-column-combinations
 categories:
-  - r
-  - rstats
   - programming
-tags:
-  - r
   - rstats
+tags:
+  - rstats
+  - tidyverse
+slug: tidy-2-way-column-combinations
 output:
   blogdown::html_page:
-    toc: true
+    toc: yes
 ---
 
 ```{r setup, include=FALSE}
