fix references election article

--- a/content/post/2020-09-11-compromise-between-the-electoral-college-and-a-national-popular-vote.Rmd
+++ b/content/post/2020-09-11-compromise-between-the-electoral-college-and-a-national-popular-vote.Rmd
@@ -20,7 +20,7 @@ output:
 Irrespective of political party or disposition towards direct democracy, the winner-take-all approach (currently applied by most US states to allocate their electoral votes for the president) has clear drawbacks. These include:
 
 * incentivizes only campaigning in battleground states
-* greater variability in outcomes compared to alternatives^[A few thousand votes in a few places have a greater chance of swaying entire elections in our current system compared to the likelihood of this occurring with a national popular vote.]
+* less reliable outcomes compared to alternatives^[A few thousand votes have a greater chance of swaying entire elections in our current system compared to the likelihood of this occurring with, for example, a national popular vote ([Heilman, 2020](https://theconversation.com/the-electoral-college-is-surprisingly-vulnerable-to-popular-vote-changes-141104)).]
 * incentivizes policies that benefit battleground states over the interests of ‘all Americans’
 * promotes a feeling among much of the electorate that their vote is unlikely to influence the election
 
@@ -38,7 +38,7 @@ Aggregating these for the 2012 election, the Democrat (Obama) would have receive
 
 A national popular vote weighted by the electoral college would truly empower small states^[The electoral college is designed to empower small states, though in practice it only empowers battleground states (at least for presidential elections).] whose voters' ballots could be worth as much as three times those of larger states[^1]. 
 
-[^1]: For an alternative approach to weighting influence, see [Schalit, 2017](https://theconversation.com/whose-votes-count-the-least-in-the-electoral-college-74280) which reviews states have the highest or lowest weighted votes based on actual voters (rather than the census). In the article they point-out that many of the votes in mid-sized states actually have the lowest weights. They attribute this to higher voter turnout and note (at the end of the article) that this may be contributed to by many of these being in battleground states.
+[^1]: For an alternative approach to weighting influence, see [Durran, 2017](https://theconversation.com/whose-votes-count-the-least-in-the-electoral-college-74280) which reviews states have the highest or lowest weighted votes based on actual voters (rather than the census). In the article they point-out that many of the votes in mid-sized states actually have the lowest weights. They attribute this to higher voter turnout and note (at the end of the article) that this may be contributed to by many of these being in battleground states.
   
     I did a similar analysis weighting by: $$\frac{totalVotes/nationalElectoralVotes(538)}{stateVotes/stateElectoralVotes}$$ Below is a figure of weights for the 2012 election:
     
@@ -46,7 +46,7 @@ A national popular vote weighted by the electoral college would truly empower sm
 
 ![State Population per electoral vote from the 2010 census, [Wikipedia, National Popular Vote Interstate Compact](https://en.wikipedia.org/wiki/National_Popular_Vote_Interstate_Compact)](https://upload.wikimedia.org/wikipedia/commons/thumb/c/c9/US_2010_Census_State_Population_Per_Electoral_Vote.png/660px-US_2010_Census_State_Population_Per_Electoral_Vote.png)
 
-While this may seem horribly unfair, it only makes the existing biases built into the electoral college more transparent. Also^[regardless of your opinion on the electoral college and whether voters in small states *should* be afforded outsized representation compared to their population], it still represents a major improvement in representativeness over the existing system -- where only a ~quarter of the population’s votes make any substantitive difference in the outcome of the election (those votes in battleground states^[“Influence" here is evidenced by campaign events and ad spending among candidates as described at [this page](https://www.nationalpopularvote.com/written-explanation).]). 
+While this may seem horribly unfair, it only makes the existing biases built into the electoral college more transparent. Also^[regardless of your opinion on the electoral college and whether voters in small states *should* be afforded outsized representation compared to their population], it still represents a major improvement in representativeness over the existing system -- where only a ~quarter of the population’s votes make any substantitive difference in the outcome of the election (those votes in battleground states^[“Influence" here is evidenced by campaign events and ad spending among candidates as described by the [the National Popular Vote Initiative](https://www.nationalpopularvote.com/written-explanation).]). 
 
 A weighted national popular vote would likely preserve (at least in part) any advantage a party has in the electoral college (for a given election cycle). This would make associated legislation potentially easier to pass and more enduring across changes in state party leadership (compared to legislation for a raw popular vote). The weighted popular vote also maintains the essence of the existing electoral college^[I.e. it still spreads out votes by states and not just across the population] -- it just replaces 'winner-take-all' with 'proportional' allocation of a state's electoral votes (perhaps a less glaring difference compared to adopting a raw national popular vote).
 
@@ -89,7 +89,7 @@ Essentially it was a [collective action problem](https://en.wikipedia.org/wiki/C
 
 # Closing note
 
-The chief advantage of a national popular vote for presidential elections is not that it achieves *perfect* representation but that it provides *improved incentives* for presidential candidates. For example it would promote campaigns and policy proposals that gave attention to a broader subset of the American public^[As described [here]( https://www.nationalpopularvote.com/written-explanation).] and reduce the variability in election results. However a national popular vote inevitably faces partisan challenges and may give-off the appearance of being too momentous a departure from the norms of the existing electoral college. As a compromise between these systems a national popular vote, that is weighted by the electoral college, avoids many of the challenges to legislating a pure national popular vote while still achieving its most important objectives.
+The chief advantage of a national popular vote for presidential elections is not that it achieves *perfect* representation but that it provides *improved incentives* for presidential candidates. For example it would promote campaigns and policy proposals that gave attention to a broader subset of the American public and reduce the variability in election results. However a national popular vote inevitably faces partisan challenges and may give-off the appearance of being too momentous a departure from the norms of the existing electoral college. As a compromise between these systems a national popular vote, that is weighted by the electoral college, avoids many of the challenges to legislating a pure national popular vote while still achieving its most important objectives.
 
 # Appendix
 
