edit closing note

--- a/content/post/2020-09-11-compromise-between-the-electoral-college-and-a-national-popular-vote.Rmd
+++ b/content/post/2020-09-11-compromise-between-the-electoral-college-and-a-national-popular-vote.Rmd
@@ -89,7 +89,7 @@ Essentially it was a [collective action problem](https://en.wikipedia.org/wiki/C
 
 # Closing note
 
-The chief advantage of a national popular vote for presidential elections is not that it achieves *perfect* representation but that it provides *improved incentives* for presidential candidates. For example it would promote campaigns and policy proposals that gave attention to a broader subset of the American public and reduce the variability in election results. However a national popular vote inevitably faces partisan challenges and may give-off the appearance of being too momentous a departure from the norms of the existing electoral college. As a compromise between these systems a national popular vote, that is weighted by the electoral college, avoids many of the challenges to legislating a pure national popular vote while still achieving its most important objectives.
+The chief advantage of a national popular vote for presidential elections is not that it achieves *perfect* representation but that it provides *improved incentives* for presidential candidates. For example it would incentivize campaigns to give attention to a broader subset of the American public and increase the reliability of election results. However a national popular vote inevitably faces partisan challenges and may give-off the appearance of being too momentous a departure from the norms of the existing electoral college. As a compromise between these systems, a national popular vote that is weighted by the electoral college avoids many of the challenges to legislating a pure national popular vote while still achieving its most important objectives.
 
 # Appendix
 
