--- a/content/post/2020-09-11-compromise-between-the-electoral-college-and-a-national-popular-vote.Rmd
+++ b/content/post/2020-09-11-compromise-between-the-electoral-college-and-a-national-popular-vote.Rmd
@@ -84,8 +84,11 @@ Essentially it was a [collective action problem](https://en.wikipedia.org/wiki/C
 *Ways of getting around this collective action problem:*
 
 *	The approach the National Popular Vote initiative has used is to have individual states pass laws that only go into effect once the requisite threshold of electoral votes is reached – thereby not forcing any individual state to ‘give-up’ some of their influence prematurely. The same approach could be taken to push adoption of a weighted national popular vote^[I.e. the law would only go into effect when states representing 270 electoral votes passed legislation.].
-*	Other approaches may be more piecemeal. For example states of similar size and counterbalanced political leanings could agree to pass proportional voting laws simultaneously – thereby not reducing the support to their preferred presidential candidate (but still empowering the voters within their state)^[E.g. say a ten vote state that tends to go 60% democratic teams up with another ten vote state that tends to go 60% republican and each pass a proportional voting system simultaneously.]. Such an approach would be more effective if fractional votes among electors are allowed^[Interesting article on fractional representatives: http://www.hnn.us/articles/129114.html .] ^[If such an approach were adopted by all states, it would create the problem of it being more likely that an individual candidates does not receive the constitutionally required 270 electoral votes... which would need to be addressed. Perhaps could be handled by letting voters put a second choice of candidate. Then If a candidate isn't in the top two, his voters ballots would flow to their 2nd choices (or 3rd, and so-on).].
+*	Other approaches may be more piecemeal. For example states of similar size and counterbalanced political leanings could agree to pass proportional voting laws simultaneously – thereby not reducing the support to their preferred presidential candidate^[E.g. say a ten vote state that tends to go 60% democratic teams up with another ten vote state that tends to go 60% republican and each pass a proportional voting system simultaneously.]. Such an approach would be more effective if fractional votes among electors are allowed^[Interesting article on fractional representatives: http://www.hnn.us/articles/129114.html .] ^[If such an approach were adopted by all states, it would create the problem of it being more likely that an individual candidates does not receive the constitutionally required 270 electoral votes... which would need to be addressed. Perhaps could be handled by letting voters put a second choice of candidate. Then If a candidate isn't in the top two, his voters ballots would flow to their 2nd choices (or 3rd, and so-on).]. However there is an argument that states would not have an incentive to pass this type of legislation on a piecemeal basis because it would transfer influence to the existing 'winner-take-all' states[^2].
 *	A US constitutional amendment...
+
+[^2]: >"Enactment of the whole number proportional approach on a state-by-state basis would penalize early adopters and quickly become a self-arresting process, because each enactment would increase the influence of the remaining winner-take-all states."
+    >[National Popular Vote Iniative](https://www.nationalpopularvote.com/shortcoming-proportional-method-awarding-electoral-votes)
 
 # Closing note
 
