fix typ in dplyr across post

--- a/content/post/2020-06-25-using-across-to-build-functions-with-dplyr-with-notes-on-legacy-approaches.Rmd
+++ b/content/post/2020-06-25-using-across-to-build-functions-with-dplyr-with-notes-on-legacy-approaches.Rmd
@@ -32,7 +32,7 @@ Pretend we want to create a function that calculates the sum of a given variable
 ```{r}
 sum_var <- function(df, var){
   
-  summarise(df, {{var_quo}} := sum({{var_quo}}))
+  summarise(df, {{var}} := sum({{var}}))
 }
 ```
 
